# xbox-webapi-vala

./: .travis.yml  Dockerfile  README.md  docker_build.sh  meson.build
src/Api/: XblApiClient.vala  XblConfiguration.vala  XblLanguage.vala  XblService.vala
src/Api/Services/: PresenceService.vala
src/Authentication/: AuthenticationService.vala  WindowsLiveConstants.vala
src/Authentication/Model/: WindowsLiveAuthenticationQuery.vala  WindowsLiveRefreshQuery.vala  WindowsLiveResponse.vala  XASDRequest.vala  XASResponse.vala  XASTRequest.vala  XASURequest.vala  XSTSRequest.vala  XboxUserInformation.vala
src/Authentication/Token/: AccessToken.vala  BaseAuthToken.vala  DeviceToken.vala  RefreshToken.vala  TitleToken.vala  UserToken.vala  XToken.vala
